--- a/_quarto.yml
+++ b/_quarto.yml
@@ -4,12 +4,30 @@ project:
 
 website:
   title: "Nissim Lebovits"
+  favicon: "assets/alps_profile_pig.jpeg"
   navbar:
     left:
       - href: index.qmd
         text: Home
       - projects.qmd 
       - resume.qmd
+    right:
+      - icon: linkedin
+        href: www.linkedin.com/in/nlebovits
+      - icon: github
+        href: https://github.com/nlebovits/
+  search: 
+    location: navbar
+    type: overlay
+      
+  page-footer:
+    center: |
+      [Contact Nissim](mailto:nissim@design.upenn.edu)
+    left: |
+      Made with [Quarto](https://quarto.org/)
+    right: |
+      [Github](https://github.com/nlebovits)
+    background: "#f8f9fa"
 
 format:
   html:
@@ -18,4 +36,6 @@ format:
     toc: true
 
 editor: source
+
+
 
