--- a/_quarto.yml
+++ b/_quarto.yml
@@ -24,16 +24,18 @@ website:
     center: |
       [Contact Me](mailto:nissim@design.upenn.edu)
     left: |
-      Made with [Quarto](https://quarto.org/)
+      &#169; 2023 Nissim Lebovits &#8729; Made with [Quarto](https://quarto.org)
     right: |
       [Check out my Github](https://github.com/nlebovits)
     background: "#f8f9fa"
 
 format:
   html:
-    theme: cosmo
+    theme: 
+      - cosmo
     css: styles.css
     toc: true
+    pagetitle: "{{< meta title >}} | Nissim Lebovits"
 
 editor: source
 
