--- a/_quarto.yml
+++ b/_quarto.yml
@@ -33,7 +33,7 @@ website:
 format:
   html:
     theme: 
-      - cosmo
+      light: cosmo
     css: styles.css
     toc: true
     pagetitle: "{{< meta title >}} | Nissim Lebovits"
